fixed horizontal scrolling on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,11 @@ h3 {
     padding: 0;
 }
 
+.page-container {
+    max-width: 100vw;
+    overflow: hidden;
+}
+
 section {
     background-color: whitesmoke;
     width: 100%;
@@ -70,6 +75,7 @@ a:hover {
 .max-600 {
     max-width: 600px;
     padding: 60px 20px;
+    margin: 0%;
 }
 
 .btn {
@@ -382,5 +388,6 @@ footer {
     .top-section {
         padding-top: 170px;
     }
+    
 
  }
